# mordheim

./: .gitignore  BATTLEMODE_README.md  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  wait_for_db.py
backend/apps/battles/: apps.py  models.py  urls.py  views.py
backend/apps/battles/migrations/: 0001_initial.py  0002_battle_scenario.py  (+11 more)
backend/apps/bestiary/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/campaigns/: apps.py  models.py  permissions.py  pivotal_moments.py  serializers.py  urls.py  views.py
backend/apps/core/: throttling.py  urls.py  views.py
backend/apps/features/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/items/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/logs/: utils.py
backend/apps/notifications/: models.py  urls.py  utils.py  views.py
backend/apps/others/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/races/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/realtime/: channel_auth.py  services.py  urls.py  views.py
backend/apps/restrictions/: models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/skills/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/special/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/spells/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/trades/: models.py  urls.py  views.py
backend/apps/users/: emails.py  serializers.py  urls.py  views.py
backend/apps/warbands/: apps.py  models.py  permissions.py  restrictions.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/csvs/: items.json
backend/database_csv/: Warband Campaign App – Data Model 054088f711b44a0da6070bea2cb955b3.csv
backend/mordheim_backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/scripts/: extract_items_pdf.py
frontend/: Dockerfile  (+8 more)
(+691 files in other folders)
