[project]
name = "mordheim-backend"
version = "0.1.0"
description = "Mordheim warband management backend"
requires-python = ">=3.12"
dependencies = [
    "Django==5.0.3",
    "psycopg[binary]==3.3.2",
    "django-cors-headers==4.3.1",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "pdfplumber==0.11.4",
    "dj-database-url==2.1.0",
    "python-dotenv==1.2.1",
    "gunicorn==25.0.1",
    "requests==2.32.3",
    "pusher==3.3.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "django-stubs[compatible-mypy]",
    "djangorestframework-stubs[compatible-mypy]",
    "types-requests",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "DJ",  # django-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "DJ001",  # null=True on string fields (intentional in existing schema)
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
packages = ["apps", "config"]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
# disallow_untyped_defs = true  # enable incrementally as annotations are added

# Useful if any imported modules don't support mypy or you want other
# settings for them.
# [[tool.mypy.overrides]]
# module = "some_module.*"     # Specify individually
# ignore_missing_imports = true
#
# [[tool.mypy.overrides]]
# module = [                   # Or specify together
#     "some_other_module.*",
#     "yet_another_module.*"
# ]
# ignore_missing_imports = true


[tool.django-stubs]
django_settings_module = "config.settings"
